Fix navbar collapse

--- a/css/main.css
+++ b/css/main.css
@@ -1279,37 +1279,6 @@ textarea.form-control {
 
 
 /*============================================================
-	Navbar collapse at 1024px
-==============================================================*/
-
-@media (max-width: 1024px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-}
-
-/*============================================================
 	Tablet (Portrait) Design for a width of 768px
 ==============================================================*/
 
